Bug 15934 - [mpx branch] Qt scrollbars don't work
Summary: [mpx branch] Qt scrollbars don't work
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Input/Core (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-14 13:28 UTC by Brian Rogers
Modified: 2008-05-16 18:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Brian Rogers 2008-05-14 13:28:21 UTC
This bug affects the mpx branch and I've verified that it does not occur in the master branch.

Qt-based scrollbars do not respond to any sort of mouse input (except for the scrollwheel). They don't light up when the mouse is over them, and no part responds to clicks or drags. Every Qt app I've tried displayed this problem: Konsole, KWrite, Kate, KDiff3. All other parts of the GUI are functional.

This is on Ubuntu Hardy with libqt3-mt version 3:3.3.8-b-0ubuntu3.
Comment 1 Peter Hutterer 2008-05-15 17:22:20 UTC
Problem was caused by a wrong state field in the event. The code assembled the
state after updating the device and as a result, the state included the change
initiated by the event. This is against the specs, and caused the Qt
scrollbars to fail. Simply generating the state before updating the device
resolves the problem.

Fixed here, will be fixed in upstream as soon as I can push again. Thanks for
reporting!
Comment 2 Peter Hutterer 2008-05-16 18:09:07 UTC
pushed as 28378d26b4bae377ef1212f6a51cda9b5529f1b5.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.